# bottest

./: Cargo.toml  E2E_TESTING_PLAN.md  PROMPT.md  README_E2E_TESTING.md  RUN_E2E_TESTS.sh  TASKS.md  TEMP_STACK_SETUP.md
.forgejo/workflows/: bottest.yaml
src/: harness.rs  lib.rs  main.rs  ports.rs
src/bot/: conversation.rs  mod.rs  runner.rs
src/desktop/: mod.rs
src/fixtures/: mod.rs
src/fixtures/data/: mod.rs
src/fixtures/scripts/: mod.rs
src/mocks/: llm.rs  mod.rs  teams.rs  whatsapp.rs  zitadel.rs
src/services/: browser_service.rs  chromedriver.rs  minio.rs  mod.rs  postgres.rs  redis.rs
src/web/: browser.rs  mod.rs
src/web/pages/: mod.rs
tests/e2e/: auth_flow.rs  chat.rs  dashboard.rs  mod.rs  platform_flow.rs
tests/integration/: api.rs  basic_runtime.rs  database.rs  mod.rs
tests/unit/: attendance.rs  math_functions.rs  mod.rs  string_functions.rs
tests/unit/attendance/: attendance.rs  attendance_llm_assist.rs  mod.rs
tests/unit/basic/: basic_compiler_goto_transform.rs  basic_keywords_a2a_protocol.rs  basic_keywords_add_bot.rs  basic_keywords_add_member.rs  basic_keywords_add_suggestion.rs  basic_keywords_agent_reflection.rs  basic_keywords_arrays.rs  basic_keywords_arrays_contains.rs  basic_keywords_arrays_push_pop.rs  basic_keywords_arrays_slice.rs  basic_keywords_arrays_sort.rs  basic_keywords_arrays_unique.rs  basic_keywords_book.rs  basic_keywords_card.rs  basic_keywords_clear_kb.rs  basic_keywords_code_sandbox.rs  basic_keywords_core_functions.rs  basic_keywords_create_task.rs  basic_keywords_crm_attendance.rs  basic_keywords_crm_score_lead.rs  basic_keywords_data_operations.rs  basic_keywords_datetime_dateadd.rs  basic_keywords_datetime_extract.rs  basic_keywords_datetime_now.rs  basic_keywords_episodic_memory.rs  basic_keywords_errors.rs  basic_keywords_errors_on_error.rs  basic_keywords_errors_throw.rs  basic_keywords_file_operations.rs  basic_keywords_hear_talk.rs  basic_keywords_http_operations.rs  basic_keywords_human_approval.rs  basic_keywords_import_export.rs  basic_keywords_kb_statistics.rs  basic_keywords_knowledge_graph.rs  basic_keywords_lead_scoring.rs  basic_keywords_llm_macros.rs  basic_keywords_math_abs.rs  basic_keywords_math_aggregate.rs  basic_keywords_math_basic_math.rs  (+37 more)
tests/unit/calendar/: calendar.rs  mod.rs
tests/unit/compliance/: compliance.rs  compliance_code_scanner.rs  mod.rs
tests/unit/console/: console_wizard.rs  mod.rs
tests/unit/core/: core_bot_manager.rs  core_config_model_routing_config.rs  core_config_sse_config.rs  core_config_user_memory_config.rs  core_kb.rs  core_kb_document_processor.rs  core_kb_embedding_generator.rs  core_kb_kb_indexer.rs  core_oauth.rs  core_oauth_providers.rs  core_package_manager_cache.rs  core_package_manager_setup_directory_setup.rs  core_package_manager_setup_email_setup.rs  core_rate_limit.rs  core_secrets.rs  core_shared_models.rs  core_shared_state.rs  core_shared_test_utils.rs  core_urls.rs  mod.rs
tests/unit/drive/: drive_vectordb.rs  mod.rs
tests/unit/email/: email_stalwart_client.rs  email_stalwart_sync.rs  email_vectordb.rs  mod.rs
tests/unit/llm/: llm_cache_test.rs  llm_observability.rs  mod.rs
tests/unit/security/: mod.rs  security.rs  security_antivirus.rs  security_ca.rs  security_cert_pinning.rs  security_integration.rs  security_mutual_tls.rs  security_tls.rs
tests/unit/sources/: mod.rs  sources_mcp.rs
tests/unit/timeseries/: mod.rs  timeseries.rs
tests/unit/vector_db/: mod.rs  vector_db_bm25_config.rs  vector_db_hybrid_search.rs  vector_db_vectordb_indexer.rs
tests/unit/weba/: mod.rs  weba.rs
tests/unit/whatsapp/: mod.rs  whatsapp.rs
